--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <div class="col-xs-1" align="center">
         <h1>Witaj na stronie "Engine param"</h1>
         <h1></h1>
-        <a href="{{url_for('processingcore.upload')}}" class="btn btn-primary">Wgraj plik</a>
+        <a href="{{url_for('processingcore.upload')}}" class="btn btn-primary">Wygeneruj raport</a>
     </div>
     <div class="col-xs-1" align="center">
         <h1></h1>
