--- a/templates/pc_chart.html
+++ b/templates/pc_chart.html
@@ -1,7 +1,15 @@
 {%extends "base.html"%}
 {%block content%}
 <body>
-    <h1>Wykres 1</h1>
+    <div>
     <img src="Wykres_CHT.png">
+    <img src="Wykres_EGT.png">
+    <img src="Wykres_Oil.png">
+    </div>
+    <div style="margin-top:30px;" class="col-xs-1 text-center">
+        <p><a href="{{url_for('index')}}" class="btn btn-primary">
+            Wróć do strony głównej
+        </a></p>
+    </div>
 </body>
 {%endblock%}
