--- a/templates/upload.html
+++ b/templates/upload.html
@@ -8,6 +8,7 @@
                 <p>Wgraj plik do analizy (format: CSV)</p>
                 <form method="POST" action="{{url_for('processingcore.upload')}}" enctype="multipart/form-data">
                     <input type="file" name="workfile" accept="text/csv">
+                    <input type="text" name="eng_name" placeholder="Podaj typ silnika">
                     <input type="submit" value="Wgraj plik"> 
                 </form>
 
@@ -18,6 +19,7 @@
                 <form method="POST" action="{{url_for('processingcore.upload')}}" enctype="multipart/form-data">
                     <input type="file" name="workfile" accept="application/vnd.openxmlformats-officedocument.spreadsheet.sheet, 
                     application/vnd.ms-excel">
+                    <input type="text" name="eng_name" placeholder="Podaj typ silnika">
                     <input type="submit" value="Wgraj plik">
                 </form>
 
