On branch master Changes to be committed: 	modified:   engparamdb.db 	modified:   fdbsql.py 	modified:   templates/db_add.html 	modified:   templates/db_view.html
Added low and high pressure of oil limits to software and DB

--- a/templates/db_add.html
+++ b/templates/db_add.html
@@ -20,6 +20,12 @@
             <div class="form-group">
                 <input type="text" class="form-control" name="egt" placeholder="Maks. EGT">
             </div>
+            <div class="form-group">
+                <input type="text" class="form-control" name="p_oil_l" placeholder="Maks. ciśnienie Oleju">
+            </div>
+            <div class="form-group">
+                <input type="text" class="form-control" name="p_oil_h" placeholder="Min. ciśnienie Oleju">
+            </div>
             <input type="submit" name="Dodaj" class="btn btn-warning" value="Dodaj">
         </form>
     </div>
