--- a/templates/db_view.html
+++ b/templates/db_view.html
@@ -13,6 +13,8 @@
                     <td>T. Oil</td>
                     <td>CHT</td>
                     <td>EGT</td>
+                    <td>Min. P Oleju</td>
+                    <td>Maks. P Oleju</td>
                 </tr>
                 {%for i in tbl%}
                 <tr>
@@ -21,6 +23,8 @@
                     <td>{{ i[2] }}</td>
                     <td>{{ i[3] }}</td>
                     <td>{{ i[4] }}</td>
+                    <td>{{ i[5] }}</td>
+                    <td>{{ i[6] }}</td>
                 </tr>
                 {%endfor%}
             </table>
