On branch master Changes to be committed: 	modified:   engparamdb.db 	modified:   fdbsql.py 	modified:   info_database.md 	modified:   roadmap.md 	new file:   templates/db_chng_row.html 	modified:   templates/db_view.html
Dodano funkcję edycji wiersza do bazy danych!

--- a/templates/db_view.html
+++ b/templates/db_view.html
@@ -35,7 +35,12 @@
             Dodaj silnik
         </a>
     </div>
-    <div style="margin-top:10px" class="col-xs-1 text-center">
+    <div style="margin-top:10px;" class="col-xs-1 text-center">
+        <a href="{{url_for('fdbsql.mod_row_main')}}" class="btn btn-info">
+            Edytuj wiersz danych
+        </a>
+    </div>
+        <div style="margin-top:10px" class="col-xs-1 text-center">
         <a href="{{url_for('fdbsql.del_val')}}" class="btn btn-danger">Usuń wiersz</a>
     </div>
     <div style="margin-top:10px" class="col-xs-1 text-center">
