--- a/templates/pc_chart.html
+++ b/templates/pc_chart.html
@@ -1,10 +1,15 @@
 {%extends "base.html"%}
 {%block content%}
 <body>
-    <div>
-    <img src="Wykres_CHT.png">
-    <img src="Wykres_EGT.png">
-    <img src="Wykres_Oil.png">
+    <div class="col-xs-1" align="center">
+    <p1><b>Aby powiększyć zdjęcia, kliknij prawy przycisk myszy, a następnie "Otwórz grafikę w nowej karcie.
+        W ten sposób zostanie ukazane zdjęcie w pełnej swojej rozdzielczości
+    </b></p1>
+    <img style="margin-top:20px;" src="Wykres_CHT.png" width="1200" height="800">
+    <img style="margin-top:20px;" src="Wykres_EGT.png" width="1200" height="800">
+    <img style="margin-top:20px;" src="Wykres_Oil.png" width="1200" height="800">
+    <img style="margin-top:20px;" src="Wykres AnomalieCiśnienia.png" width="1200" height="800">
+    <img style="margin-top:20px;" src="Wykres AnomalieTempOleju.png" width="1200" height="800">
     </div>
     <div style="margin-top:30px;" class="col-xs-1 text-center">
         <p><a href="{{url_for('index')}}" class="btn btn-primary">
