--- a/templates/db_chng_row.html
+++ b/templates/db_chng_row.html
@@ -1,6 +1,20 @@
 {%extends "base.html"%}
 {%block content%}
 <body>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <ul class=flashes>
+            {% for message in messages %}
+            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            {{message}}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+        </button>
+        </div>
+            {% endfor %}
+            </ul>
+        {% endif %}
+    {%endwith%}
     <div class="col-xs-1" align="center">
         <h1>Wybierz wiersz do edycji</h1>
         <p1>
