--- a/templates/pc_chart.html
+++ b/templates/pc_chart.html
@@ -1,6 +1,20 @@
 {%extends "base.html"%}
 {%block content%}
 <body>
+    {% with messages = get_flashed_messages()%}
+        {% if messages %}
+            <ul class=flashes>
+            {% for message in messages %}
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+            {{message}}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+        </button>
+        </div>
+            {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
     <div class="col-xs-1" align="center">
     <p1><b>Aby powiększyć zdjęcia, kliknij prawy przycisk myszy, a następnie "Otwórz grafikę w nowej karcie.
         W ten sposób zostanie ukazane zdjęcie w pełnej swojej rozdzielczości
