--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,6 +1,20 @@
 {% extends "base.html" %}
 {%block content%}
 <body>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <ul class=flashes>
+            {% for message in messages %}
+                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    {{message}}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+                </div>
+            {% endfor %}
+            </ul>
+        {% endif %}
+    {%endwith%}
     <div class="container"> 
         <div class="row">   
             <div class="col-sm">
