On branch master Changes to be committed: 	modified:   processingcore.py 	modified:   roadmap.md 	modified:   templates/pc_chart.html 	new file:   templates/pc_output.html
Dodano funkcję pobierania raportu

--- a/templates/pc_chart.html
+++ b/templates/pc_chart.html
@@ -30,5 +30,10 @@
             Wróć do strony głównej
         </a></p>
     </div>
+    <div style="margin-top:30px;" class="col-xs-1 text-center">
+        <p><a href="{{url_for('processingcore.download')}}" class="btn btn-primary">
+            Pobierz plik
+        </a></p>
+    </div>
 </body>
 {%endblock%}
