On branch master Changes to be committed: 	new file:   README.md 	new file:   alghoritms.py 	modified:   lib/chartgen.py 	modified:   processingcore.py 	modified:   roadmap.md 	modified:   run.py 	modified:   templates/pc_chart.html 	new file:   templates/pc_nm.html 	modified:   templates/upload.html
Dodano funkcję tworzenia customowych wykresów

--- a/templates/pc_chart.html
+++ b/templates/pc_chart.html
@@ -16,7 +16,7 @@
         {% endif %}
     {% endwith %}
     <div class="col-xs-1" align="center">
-    <p1><b>Aby powiększyć zdjęcia, kliknij prawy przycisk myszy, a następnie "Otwórz grafikę w nowej karcie.
+    <p1><b>Aby powiększyć zdjęcia, kliknij prawy przycisk myszy, a następnie <i>"Otwórz grafikę w nowej karcie"</i>.
         W ten sposób zostanie ukazane zdjęcie w pełnej swojej rozdzielczości
     </b></p1>
     <img style="margin-top:20px;" src="Wykres_CHT.png" width="1200" height="800">
