--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 {%block content%}
 <body>
-    {% with messages = get_flashed_messages() %}
+    {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
             <ul class=flashes>
-            {% for message in messages %}
-                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            {% for category, message in messages %}
+            <!--IN CLASS: alert alert-danger alert-dismissible fade show -->
+                <div class="{{category}}" role="alert">
                     {{message}}
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
@@ -17,7 +18,7 @@
     {%endwith%}
     <div class="container"> 
         <div class="row">   
-            <div class="col-sm">
+            <div class="col-xs-1 text-center">
 
                 <p>Wgraj plik do analizy (format: CSV)</p>
                 <form method="POST" action="{{url_for('processingcore.upload')}}" enctype="multipart/form-data">
@@ -26,18 +27,6 @@
                     <input type="submit" value="Wgraj plik"> 
                 </form>
 
-            </div>
-            <div class="col-sm">
-
-                <p>Wgraj plik do analizy (format: Plik Excel)</p>
-                <form method="POST" action="{{url_for('processingcore.upload')}}" enctype="multipart/form-data">
-                    <input type="file" name="workfile" accept="application/vnd.openxmlformats-officedocument.spreadsheet.sheet, 
-                    application/vnd.ms-excel">
-                    <input type="text" name="eng_name" placeholder="Podaj typ silnika">
-                    <input type="submit" value="Wgraj plik">
-                </form>
-
-            </div>
         </div>
     </div>
     <div style="margin-top:30px;" class="col-xs-1 text-center">
