On branch master Changes to be committed: 	renamed:    alghoritms.py -> lib/alghoritms.py 	modified:   lib/chartgen.py: dodano linie graniczne parametrów                                  dodano funkcję "quickchart" 	modified:   processingcore.py: zmieniono <nm>, dodano drugi wykres, drugą linię danych w pierwszym wykresie 	modified:   run.py Templates: 	modified:   templates/db_add.html 	modified:   templates/db_chng_row.html 	modified:   templates/db_rem_row.html 	modified:   templates/db_view.html 	modified:   templates/index.html 	modified:   templates/pc_chart.html 	modified:   templates/pc_nm.html 	modified:   templates/upload.html     usprawnienia graficzne + wspierania funkcji powyżej

--- a/templates/db_add.html
+++ b/templates/db_add.html
@@ -26,7 +26,9 @@
             <div class="form-group">
                 <input type="text" class="form-control" name="p_oil_h" placeholder="Min. ciśnienie Oleju">
             </div>
-            <input type="submit" name="Dodaj" class="btn btn-warning" value="Dodaj">
+            <div style="margin-top:10px;" class="col-xs-1 text-center">
+                <input type="submit" name="Dodaj" class="btn btn-warning" value="Dodaj">
+            </div>
         </form>
     </div>
     <div style="margin-top:20px;" class="col-xs-1 text-center">
