--- a/templates/index.html
+++ b/templates/index.html
@@ -12,5 +12,11 @@
             Podejrzyj bazę parametrów
         </a>
     </div>
+    <div class="col-xs-1" align="center">
+        <h1></h1>
+        <a href="{{url_for('shutdown')}}" class="btn btn-danger">
+            Wyłącz aplikacje
+        </a>
+    </div>
 </body>
 {%endblock%}
