--- a/templates/pc_chart.html
+++ b/templates/pc_chart.html
@@ -30,7 +30,12 @@
             Wróć do strony głównej
         </a></p>
     </div>
-    <div style="margin-top:30px;" class="col-xs-1 text-center">
+    <div style="margin-top:20px;" class="col-xs-1 text-center">
+        <p><a href="{{url_for('processingcore.new_menu')}}" class="btn btn-primary">
+            Dalsza analiza
+        </a></p>
+    </div>
+    <div style="margin-top:20px;" class="col-xs-1 text-center">
         <p><a href="{{url_for('processingcore.download')}}" class="btn btn-primary">
             Pobierz plik
         </a></p>
