--- a/templates/db_view.html
+++ b/templates/db_view.html
@@ -4,21 +4,24 @@
     <div class="col-xs-1" align="center">
         <h1>Baza danych parametrów silników</h1>
     </div>
-    <div class="col-xs-1" align="center">
+    <div class="col-xs-1 table-responsive" align="center">
         <body>
-            <table id = "tabela">
-                <tr>
-                    <td>Nazwa</td>
-                    <td>Typ</td>
-                    <td>T. Oil</td>
-                    <td>CHT</td>
-                    <td>EGT</td>
-                    <td>Min. P Oleju</td>
-                    <td>Maks. P Oleju</td>
-                </tr>
+            <table id = "tabela" class="table w-75">
+                <thead>
+                    <tr>
+                        <th scope="col">Nazwa silnika</th>
+                        <th scope="col">Typ</th>
+                        <th scope="col">T. Oleju</th>
+                        <th scope="col">CHT</th>
+                        <th scope="col">EGT</th>
+                        <th scope="col">Min. P Oleju</th>
+                        <th scope="col">Maks. P Oleju</th>
+                    </tr>
+                </thead>
+                <tbody>
                 {%for i in tbl%}
                 <tr>
-                    <td>{{ i[0] }}</td>
+                    <th scope="row">{{ i[0] }}</th>
                     <td>{{ i[1] }}</td>
                     <td>{{ i[2] }}</td>
                     <td>{{ i[3] }}</td>
@@ -27,6 +30,7 @@
                     <td>{{ i[6] }}</td>
                 </tr>
                 {%endfor%}
+                </tbody>
             </table>
         </body>
     </div>
