On branch master Changes to be committed: 	modified:   README.md     Utworzono i dodano zawartość instrukcji obsługi w pliku "REAME.md"
	modified:   engparamdb.db
	modified:   lib/alghoritms.py
	modified:   lib/chartgen.py
	modified:   lib/imath.py
	modified:   processingcore.py
	modified:   templates/pc_chart.html
	modified:   templates/pc_nm.html
    Dodano funkcję tworzenia dodatkowych wykresów, poprawa pewnych
    funkcjonalności tu i ówdzie.

--- a/templates/pc_chart.html
+++ b/templates/pc_chart.html
@@ -24,6 +24,8 @@
     <img style="margin-top:20px;" src="Wykres_Oil.png" width="1200" height="800">
     <img style="margin-top:20px;" src="Wykres AnomalieCiśnienia.png" width="1200" height="800">
     <img style="margin-top:20px;" src="Wykres AnomalieTempOleju.png" width="1200" height="800">
+    <img style="margin-top:20px;" src="aux1.png" width="1200" height="800">
+    <img style="margin-top:20px;" src="aux2.png" width="1200" height="800">
     </div>
     <div style="margin-top:30px;" class="col-xs-1 text-center">
         <p><a href="{{url_for('index')}}" class="btn btn-primary">
